# gadt-spec

./: LICENSE  gadt-spec.cabal
src/: DBOp.hs  Examples.hs  Lib.hs
